--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
+/* -------> common */
+
+/* <------- common */
+
+/* ---------> header */
+
+/* <--------- header */
+
+/* ---------> main */
+
+/* <--------- main */
+
+/* ---------> footer */
+
+/* <--------- footer */
 
