--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 
 /* ---------> header */
 
-/* 色の上書き指定 */
 header nav {
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -13,31 +12,30 @@ header .navbar-light .navbar-nav .nav-link,
 header .navbar-light .navbar-nav .show > .nav-link,
 header .navbar-light .navbar-nav .nav-link:focus,
 header .navbar-light .navbar-nav .nav-link.active {
-  color: #ffffff;
+  color: #fff;
 }
 
 header .navbar-light .navbar-nav .nav-link:hover {
-  color: #999999;
+  color: #999;
 }
 
 header .dropdown-menu.show {
-  background-color: #000000;
+  background-color: #000;
 }
 
 header .dropdown-item:focus,
 header .dropdown-item:hover {
   background-color: #664229;
-  color: #ffffff;
+  color: #fff;
 }
 
-/* バーの指定（min-1200px）　*/
-header .navber {
+header nav {
   height: 90px;
 }
 
 header .img_size {
   width: 143px;
-  height: 24.5px;
+  height: 24px;
 }
 
 header .navbar-expand-xl .navbar-collapse {
@@ -53,12 +51,11 @@ header .nav-link {
 }
 
 header .navbar-expand-xl .navbar-nav .nav-link {
-  padding: 26.5px 21px;
+  padding: 26px 21px;
 }
 
-/* ドロップダウンメニューの上書き指定 */
 header .dropdown-item {
-  color: #ffffff;
+  color: #fff;
   font-family: Verdana;
   font-size: 14px;
   font-weight: 300;
@@ -66,10 +63,10 @@ header .dropdown-item {
 }
 
 header .dropdown .dropdown-menu.show {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-  border-radius: 0px;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  border-radius: 0;
   top: 82px;
 }
 
@@ -77,15 +74,21 @@ header .dropdown-toggle:after {
   content: none;
 }
 
+/* <--------- header */
+
+/* ---------> main */
+
+/* <--------- main */
+
+/* ---------> responsive */
+
 @media (max-width: 1199px) {
-  /* ホバー時の色取り消し */
   header .dropdown-item:focus,
   header .dropdown-item:hover {
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #000;
+    color: #fff;
   }
 
-  /* 小画面時基本指定 */
   header .navber {
     height: 60px;
   }
@@ -95,15 +98,13 @@ header .dropdown-toggle:after {
   }
 
   header .navbar-expand-xl .navbar-nav .nav-link {
-    padding: 18px 0px;
+    padding: 18px 0;
   }
 
-  /* マークの消去 */
   header button:focus {
     outline: none;
   }
 
-  /* ハンバーガーバーの再作成 */
   header .navbar-toggler,
   header .navbar-toggler span {
     display: inline-block;
@@ -122,7 +123,7 @@ header .dropdown-toggle:after {
     left: 0;
     width: 20px;
     height: 2px;
-    background-color: #ffffff;
+    background-color: #fff;
     border-radius: 2px;
   }
 
@@ -136,11 +137,8 @@ header .dropdown-toggle:after {
     bottom: 0;
   }
 }
-/* <--------- header */
 
-/* ---------> main */
-
-/* <--------- main */
+/* <--------- responsive */
 
 /* ---------> footer */
 
