--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* -------> common */
 
+body {
+  font-family: Verdana;
+}
+
 /* <------- common */
 
 /* ---------> header */
@@ -33,7 +37,7 @@ header nav {
   height: 90px;
 }
 
-header .img_size {
+header .img-size {
   width: 143px;
   height: 24px;
 }
@@ -44,7 +48,6 @@ header .navbar-expand-xl .navbar-collapse {
 
 header li .nav-item,
 header .nav-link {
-  font-family: Verdana;
   font-size: 14px;
   font-weight: 300;
   height: 100%;
@@ -56,7 +59,6 @@ header .navbar-expand-xl .navbar-nav .nav-link {
 
 header .dropdown-item {
   color: #fff;
-  font-family: Verdana;
   font-size: 14px;
   font-weight: 300;
   padding: 15px 30px;
@@ -89,7 +91,7 @@ header .dropdown-toggle:after {
     color: #fff;
   }
 
-  header .navber {
+  header nav {
     height: 60px;
   }
 
