やり直し中です

--- a/style.css
+++ b/style.css
@@ -2,12 +2,78 @@
 
 body {
   font-family: Verdana;
+  height: 400vh;
 }
 
 /* <------- common */
 
 /* ---------> header */
+#header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 1;
+}
 
+#header .navbar {
+  padding: 0;
+}
+
+#header .bg-dark {
+  background-color: #000 !important;
+}
+
+#header .navbar-brand {
+  padding: 15px 0;
+  margin-left: 70px;
+}
+
+#header .navbar-brand img {
+  width: 143px;
+  height: 24px;
+}
+
+#header .navbar-nav {
+  margin-right: 70px;
+}
+
+#header .nav-item .nav-link {
+  padding: 33px 21px;
+}
+
+#header .dropdown-menu {
+  background-color: #000000;
+}
+
+#header .dropdown-menu .dropdown-item {
+  color: #fff;
+}
+
+main .hero {
+  background-image: url('./bg.JPG');
+  background-size: cover;
+  background-position: center;
+}
+
+@media (max-width: 1199px) {
+  #header .nav-item .nav-link {
+    padding: 0px 50px;
+    line-height: 50px;
+    font-size: 14px;
+  }
+  #header .navbar-nav {
+    margin-right: 0;
+  }
+
+  #header .dropdown-item {
+    padding: 0 50px;
+    line-height: 50px;
+    font-size: 14px;
+  }
+}
+
+/* 
 header nav {
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -74,7 +140,7 @@ header .dropdown .dropdown-menu.show {
 
 header .dropdown-toggle:after {
   content: none;
-}
+} */
 
 /* <--------- header */
 
@@ -83,7 +149,7 @@ header .dropdown-toggle:after {
 /* <--------- main */
 
 /* ---------> responsive */
-
+/* 
 @media (max-width: 1199px) {
   header .dropdown-item:focus,
   header .dropdown-item:hover {
@@ -138,7 +204,7 @@ header .dropdown-toggle:after {
   header .navbar-toggler span:nth-of-type(3) {
     bottom: 0;
   }
-}
+} */
 
 /* <--------- responsive */
 
