--- a/style.css
+++ b/style.css
@@ -16,10 +16,6 @@ body {
   z-index: 1;
 }
 
-#header .navbar {
-  padding: 0;
-}
-
 #header .bg-color {
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -53,7 +49,7 @@ body {
 }
 
 #header .dropdown-menu {
-  background-color: #000000;
+  background-color: #000;
   width: 220px;
   border: 0;
   border-radius: 0;
@@ -89,16 +85,12 @@ main .hero {
 /* ---------> responsive */
 
 @media (max-width: 1199px) {
-  /* -------> common */
-
-  /* <------- common */
-  /* ---------> header */
   #header .bg-color {
     background-color: rgba(0, 0, 0, 1);
   }
 
   #header .nav-item .nav-link {
-    padding: 0px 65px;
+    padding: 0 65px;
     line-height: 50px;
     font-size: 13px;
   }
@@ -151,18 +143,10 @@ main .hero {
   #header .navbar-toggler span:nth-of-type(3) {
     bottom: 0;
   }
-  /* <--------- header */
 
-  /* ---------> main */
   main .hero {
     position: absolute;
     top: 60px;
   }
-  /* <--------- main */
-
-  /* ---------> footer */
-
-  /* <--------- footer */
 }
-
 /* <--------- responsive */
