レビューでの指摘箇所修正

--- a/style.css
+++ b/style.css
@@ -2,60 +2,56 @@
 
 body {
   font-family: Verdana;
-  height: 400vh;
 }
 
 /* <------- common */
 
 /* ---------> header */
-#header {
+header {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
   position: absolute;
   left: 0;
-  right: 0;
   top: 0;
   z-index: 1;
 }
 
-#header .bg-color {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-#header .navbar-brand {
+header .navbar-brand {
   padding: 15px 0;
   margin-left: 70px;
 }
 
-#header .navbar-brand img {
+header .navbar-brand img {
   width: 143px;
   height: 24px;
 }
 
-#header .navbar-nav {
+header .navbar-nav {
   margin-right: 70px;
 }
 
-#header .nav-item .nav-link {
+header .navbar-nav .nav-item .nav-link {
   color: #fff;
   padding: 33px 21px;
   font-size: 14px;
 }
 
-#header .nav-item .nav-link:hover {
+header .nav-item .nav-link:hover {
   color: #999;
 }
 
-#header .dropdown-toggle:after {
+header .dropdown-toggle:after {
   content: none;
 }
 
-#header .dropdown-menu {
+header .dropdown-menu {
   background-color: #000;
   width: 220px;
   border: 0;
   border-radius: 0;
 }
 
-#header .dropdown-menu .dropdown-item {
+header .dropdown-menu .dropdown-item {
   color: #fff;
   line-height: 50px;
   font-size: 13px;
@@ -63,7 +59,7 @@ body {
   padding: 0 0 0 18px;
 }
 
-#header .dropdown-menu .dropdown-item:hover {
+header .dropdown-menu .dropdown-item:hover {
   background-color: #442606;
 }
 
@@ -85,33 +81,33 @@ main .hero {
 /* ---------> responsive */
 
 @media (max-width: 1199px) {
-  #header .bg-color {
+  header .navbar {
     background-color: rgba(0, 0, 0, 1);
   }
 
-  #header .nav-item .nav-link {
+  header .navbar-nav .nav-item .nav-link {
     padding: 0 65px;
     line-height: 50px;
     font-size: 13px;
   }
 
-  #header .navbar-nav {
+  header .navbar-nav {
     margin-right: 0;
   }
 
-  #header .dropdown-menu {
-    background-color: #000000;
+  header .dropdown-menu {
+    background-color: #000;
     width: 100%;
   }
 
-  #header .dropdown-menu .dropdown-item {
+  header .dropdown-menu .dropdown-item {
     padding: 0 70px;
   }
 
-  #header .dropdown-menu .dropdown-item:hover {
+  header .dropdown-menu .dropdown-item:hover {
     background-color: #000;
   }
-  #header .nav-item .nav-link:hover {
+  header .nav-item .nav-link:hover {
     color: #fff;
   }
 
@@ -119,13 +115,13 @@ main .hero {
     outline: none;
   }
 
-  #header .navbar-toggler {
+  header .navbar-toggler {
     position: relative;
     margin-right: 20px;
     padding: 8px 10px;
   }
 
-  #header .navbar-toggler span {
+  header .navbar-toggler span {
     position: absolute;
     left: 0;
     width: 20px;
@@ -134,19 +130,18 @@ main .hero {
     border-radius: 2px;
   }
 
-  #header .navbar-toggler span:nth-of-type(1) {
+  header .navbar-toggler span:nth-of-type(1) {
     top: 0;
   }
-  #header .navbar-toggler span:nth-of-type(2) {
+  header .navbar-toggler span:nth-of-type(2) {
     top: 7px;
   }
-  #header .navbar-toggler span:nth-of-type(3) {
+  header .navbar-toggler span:nth-of-type(3) {
     bottom: 0;
   }
 
   main .hero {
-    position: absolute;
-    top: 60px;
+    position: static;
   }
 }
 /* <--------- responsive */
