--- a/style.css
+++ b/style.css
@@ -98,24 +98,18 @@ header .dropdown-menu .dropdown-item:hover {
   writing-mode: vertical-rl;
 }
 
-#top-message .lead-container {
-  margin-bottom: 40px;
-  background-color: #000;
-  padding-top: 51px;
-  padding-bottom: 76px;
-}
-
-#top-message .lead-inner {
-  margin: 0 30px;
+#top-message .lead {
+  padding: 51px 30px 76px 30px;
   color: #fff;
+  background-color: #000;
   text-align: center;
 }
 
-#top-message .lead-inner h1 {
+#top-message .lead h1 {
   margin-bottom: 20px;
 }
 
-#top-message .lead-inner p {
+#top-message .lead p {
   line-height: 36px;
 }
 
@@ -199,20 +193,15 @@ header .dropdown-menu .dropdown-item:hover {
     font-size: 20px;
   }
 
-  #top-message .lead-container {
-    margin-bottom: 33px;
-    padding-bottom: 32px;
+  #top-message .lead {
+    padding: 51px 20px 32px 20px;
   }
-
-  #top-message .lead-inner {
-    margin: 0 20px;
-  }
-  #top-message .lead-inner h1 {
+  #top-message .lead h1 {
     margin-bottom: 10px;
     font-size: 20px;
   }
 
-  #top-message .lead-inner p {
+  #top-message .lead p {
     line-height: 26px;
   }
 }
