--- a/style.css
+++ b/style.css
@@ -81,18 +81,21 @@ header .dropdown-menu .dropdown-item:hover {
   background-image: url('./bg.JPG');
   background-size: cover;
   background-position: center;
+  width: 100%;
+  height: 500px;
+  padding-top: 62.5%;
 }
 
 #top-message .copy-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
 }
 
 #top-message .copy h1 {
-  display: inline-block;
-  margin-top: 100px;
-  height: 300px;
+  position: absolute;
+  margin: 0 auto;
+  padding-top: 20%;
+  padding-left: 15%;
+  height: 700px;
   color: #fff;
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
@@ -187,9 +190,8 @@ header .dropdown-menu .dropdown-item:hover {
 }
 
 @media (max-width: 767px) {
-  #top-message .copy p {
+  #top-message .copy h1 {
     margin-top: 70px;
-    height: 180px;
     font-size: 20px;
   }
 
