--- a/style.css
+++ b/style.css
@@ -78,24 +78,19 @@ header .dropdown-menu .dropdown-item:hover {
 /* ---------> main */
 
 #top-message .hero {
-  background-image: url('./bg.JPG');
+  background: url('./bg.JPG') no-repeat center center;
   background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 500px;
-  padding-top: 62.5%;
+  height: 800px;
 }
 
 #top-message .copy-container {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #top-message .copy h1 {
-  position: absolute;
   margin: 0 auto;
-  padding-top: 20%;
-  padding-left: 15%;
-  height: 700px;
   color: #fff;
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
@@ -126,6 +121,7 @@ header .dropdown-menu .dropdown-item:hover {
 
 @media (max-width: 1199px) {
   header {
+    position: static;
     background-color: rgba(0, 0, 0, 1);
   }
 
@@ -185,13 +181,18 @@ header .dropdown-menu .dropdown-item:hover {
   }
 
   #top-message .hero {
-    position: static;
+    height: 500px;
   }
 }
 
 @media (max-width: 767px) {
+
+  #top-message .hero {
+    height: 400px;
+  }
+  
+
   #top-message .copy h1 {
-    margin-top: 70px;
     font-size: 20px;
   }
 
