リード文周りのスペーシング調整

--- a/style.css
+++ b/style.css
@@ -78,12 +78,8 @@ header .dropdown-menu .dropdown-item:hover {
 /* ---------> main */
 
 #top-message .hero {
-  background: url('./bg.JPG') no-repeat center center;
-  background-size: cover;
+  background: url('./bg.JPG') no-repeat center center/cover;
   height: 800px;
-}
-
-#top-message .copy-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -92,19 +88,13 @@ header .dropdown-menu .dropdown-item:hover {
 #top-message .copy h1 {
   margin: 0 auto;
   color: #fff;
-  -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
 }
 
 #top-message .lead {
-  padding: 48px 32px 72px 32px;
   color: #fff;
   background-color: #000;
   text-align: center;
-}
-
-#top-message .lead h1 {
-  margin-bottom: 20px;
 }
 
 #top-message .lead p {
@@ -196,11 +186,7 @@ header .dropdown-menu .dropdown-item:hover {
     font-size: 20px;
   }
 
-  #top-message .lead {
-    padding: 48px 24px 32px 24px;
-  }
   #top-message .lead h1 {
-    margin-bottom: 10px;
     font-size: 20px;
   }
 
