containerクラス追加

--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ header .dropdown-menu .dropdown-item:hover {
 
 /* ---------> main */
 
+#top-message{
+  background-color: #000;
+}
+
 #top-message .hero {
   background: url('./bg.JPG') no-repeat center center/cover;
   height: 800px;
@@ -93,7 +97,6 @@ header .dropdown-menu .dropdown-item:hover {
 
 #top-message .lead {
   color: #fff;
-  background-color: #000;
   text-align: center;
 }
 
