--- a/style.css
+++ b/style.css
@@ -104,6 +104,31 @@ header .dropdown-menu .dropdown-item:hover {
   line-height: 36px;
 }
 
+#top-panels {
+  margin-top: 100px;
+}
+
+#top-panels .panels {
+  max-width: 1200px;
+}
+
+#top-panels .panels img {
+  width: 100%;
+}
+
+#top-panels .message {
+  background-color: #f5f5f5;
+  text-align: center;
+  max-width: 1200px;
+}
+
+#top-panels .message h1 {
+  color: #442606;
+}
+
+#top-panels .message p {
+  line-height: 36px;
+}
 /* <--------- main */
 
 /* ---------> footer */
