--- a/style.css
+++ b/style.css
@@ -202,6 +202,67 @@ header .dropdown-menu .dropdown-item:hover {
     margin-top: 60px;
     height: 500px;
   }
+
+  #intro-card .card-deck {
+    max-width: 1248px;
+    margin: 80px;
+  }
+  
+  #intro-card .card {
+    position: relative;
+    border: 0;
+    text-align: center;
+  }
+  
+  
+  #intro-card .card-tag {
+    position: absolute;
+  }
+  
+  #intro-card .card-tag::after {
+    position: absolute;
+    content:"";
+    border: solid 72px;
+    border-color: #fff transparent transparent #fff;
+  }
+  
+  #intro-card .card-tag p{
+    position: absolute;
+    z-index: 1;
+    font-weight: 700;
+    font-size: 20px;
+    color: #442602;
+  }
+  
+  
+  #intro-card .card img {
+    width: 100%;
+    height: auto;
+  }
+  
+  #intro-card .card-body {
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+    background-color: #f5f5f5;
+  }
+  
+  #intro-card p{
+    line-height: 32px;
+  }
+  
+  #intro-card .introbtn {
+    display: inline-block;
+    margin-top: auto;
+    line-height: 56px;
+    color: #fff;
+    background-color: #000;
+  }
+  
+  #intro-card .introbtn:hover {
+    background-color: #442606;
+  }
+  
 }
 
 @media (max-width: 767px) {
@@ -219,6 +280,11 @@ header .dropdown-menu .dropdown-item:hover {
 
   #top-message .lead p {
     line-height: 26px;
+  }
+
+  #intro-card .card {
+    flex: 1 1 auto;
+    margin: 24px 0;
   }
 }
 
